# junior_assignment

./: .gitignore  .gitingore  .gitmodules  CMakeLists.txt  README.md
include/: client_listener.h  drone.h  gcs.h  greeting.h  listener_client.h  listener_server.h  new_udp_client.h  new_udp_server.h  server_listener.h  udp_client.h  udp_server.h
src/: client_listener.cpp  drone.cpp  drone_main.cpp  gcs.cpp  gcs_main.cpp  greeting.cpp  listener_client.cpp  listener_server.cpp  main.cpp  new_udp_client.cpp  new_udp_server.cpp  server_listener.cpp  test_main.cpp  udp_client.cpp  udp_server.cpp
test/: CMakeLists.txt  drone_test.cpp  gcs_test.cpp  main_test.cpp  test_main.cpp  test_net_manager.cpp
